--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,8 @@
 
 
 :root {
-  --background: #EEEEEE;
+  --background: #EEE4D9;
+  /* --background: #EEEEEE; */
   /* --foreground: #000000; */
       --font-departure-mono: var(--font-departure-mono), sans-serif;
 
@@ -21,5 +22,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Georgia;
 }
